# oyaku

./: .gitignore  .gitmodules  README.md  dune-project  oyaku.opam
lib/: dune
test/: dune
theories/: Trig.v  dune
